Move .gitignore to main folder

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@
 /.idea/
 /model_checkpoint/*.pkl
 /venv1/
+__pycache__/
+*.egg-info
+__pycache__/
+*.py[cod]
+*$py.class
+dist/
+build/
+*.egg
+*.pyc
