Fix merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ build/
 /dev_pytorch_post_flow/checkpoints/
 /dev_pytorch_post_flow/wandb/
 /dev_pytorch_post_flow/sbi-logs/
+/dev_pytorch_post_flow/run_jobs/
